@@ -1,3 +1,8 @@
+2008-05-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/36237
+	* g++.dg/gomp/pr36237.C: New test.
+
 2008-05-21  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/36023
